--- a/good.css
+++ b/good.css
@@ -1,1 +1,46 @@
-good.css
+@charset "utf-8";
+
+
+body {
+	font-family: "Times New Roman", Times, serif;
+	font-size: medium;
+	font-style: oblique;
+	background-image: url("img/background2.jpg");
+	background-size: 100%;
+	letter-spacing: normal;
+	text-align: center;
+	vertical-align: middle;
+	word-spacing: normal;
+	height: auto;
+	width: auto;
+}
+
+
+div.sidebar {
+	background-image: url("img/background3.jpg");
+	background-size: 100%;
+	width:   20%;
+	height: 100%;
+	float: left;
+	font-family: "Times New Roman", Times, serif;
+	font-size: medium;
+	line-height: 2em;
+}
+
+
+h1,h1,h2,h3,h4,h5,h6 {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: xx-large;
+	font-style: italic;
+	text-decoration: blink;
+}
+
+
+div.footer {
+	margin-top:3em;
+	margin-bottom: 2em;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: large;
+	text-decoration: blink;
+}
+
